# Project_HH

./: README.md  main.py  pyproject.toml
src/: api_base.py  api_hh.py  json_storage.py  storage_base.py  utils.py  vacancy.py
tests/: test_api.py  test_storage.py  test_utils.py  test_vacancy.py
