[project]
name = "project-hh"
version = "0.1.0"
description = ""
authors = [
    {name = "Evgenii Surmin",email = "surmin1999@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
